# kis-autotrader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dashboard  README.md  alembic.ini  config_overrides.json  docker-compose.yml  holidays.json  main.py  news_worker_main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: evaluator.md  implementer.md  proposal-validator.md  rollback-handler.md  verifier.md
alembic/: env.py
alembic/versions/: 07614f34cf47_add_trade_data_tables.py  414303a37a97_add_is_watchlist_to_stocks.py  499487c40196_add_buy_reason_to_trades.py  4ea33aed4c86_add_market_actions_table.py  66bf764a73f8_extend_news_chunks_source_id_length_to_.py  6983b5db290d_add_event_logs_table.py  702dbb24bf59_add_task_queue_table.py  7be42bd70188_initial_schema.py  84febb2fdc0a_add_news_chunks_and_collection_state.py  9374c8f9c742_add_trajectory_entries_and_prediction.py  a1b2c3d4e5f6_add_peak_price_and_sell_reasons.py  dcad1efe8855_add_implementation_logs_table.py  ecdd397b8238_add_proposals_table.py  edb0690663bb_add_version_to_implementation_logs.py
config/: etf_blocklist.json  rss_feeds.example.json
dashboard/: app.py
dashboard/.streamlit/: secrets.toml.example
dashboard/pages/: performance.py  pipeline.py  risk.py  signals.py  trades.py
docs/: BRIDGE_SPEC.md  CALIBRATION_RUNBOOK.md  CHANGELOG.md
docs/03-analysis/: worker-separation.analysis.md
docs/harness/: phase0_baseline.json  phase0_baseline.md  phase1_baseline.json  phase1_completion.md  phase2_completion.md  phase3_completion.md  phase4_completion.md
docs/plans/: 2026-05-14_harness-engineering-improvement.md  2026-05-14_harness-phase1-rfc.md  2026-05-15_harness-phase2-rfc.md  2026-05-15_harness-phase3-rfc.md  2026-05-15_harness-phase4-rfc.md  2026-05-18_data-collection-pipeline.md  2026-05-21_min-confidence-tuning.md  2026-05-21_news-collection-stall-fix.md  2026-05-21_news-sentiment-importance-scoring.md  feature-roadmap.md
docs/presentation/: README.md  SCRIPT.md  SLIDEV_GUIDE.md  architecture-d2.md  architecture-excalidraw.md  architecture-mermaid.md  package-lock.json  package.json  slides.md
docs/prompts/: README.md  _common_rules.md  daily_analysis.md  daily_routine.md  monthly_analysis.md  weekly_review.md  (+4 more)
scripts/: analyze_slippage.py  auto_heal.sh  auto_heal_prompt.txt  auto_implement_prompt.txt  auto_implement_prompt_v2.txt  backfill_news_scores.py  backup_db.sh  bootstrap_real_db.sh  collect_market_stats.py  create_patch_note_event.py  debug_raw_response.py  debug_strategy.py  docker-entrypoint.sh  generate_daily_report.py  migrate_changelog_to_db.py  query_analytics.py  record_implementation.py  run_auto_implement.sh  run_backtest.py  run_daily_analysis.sh  run_dashboard.sh  run_weekly_analysis.sh  sync_market_master.py  test_calendar.py  test_real_buy.py  test_volume_rank.py  trigger_implement.sh  watchdog.sh
src/: __version__.py  config.py  engine.py  market_master.py  market_stats.py
tests/: test_analytics.py  test_analytics_queries.py  test_config.py  test_engine_buy_funnel.py  test_engine_buy_gate_metric.py  test_engine_daily_trade_limit_per_stock.py  test_engine_db_integration.py  test_engine_disclosure_risk_gate.py  test_engine_fill_confirmation.py  test_engine_pending_orders.py  test_engine_risk_only_eval.py  test_engine_safety_phase0.py  test_engine_sell_reason.py  test_engine_signal_reversal.py  test_engine_slippage.py  test_engine_trailing_stop.py  test_engine_untradable_blacklist.py  test_versioning.py
(+330 files in other folders)
