[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kis-autotrader"
version = "0.2.3"
description = "KIS OpenAPI 기반 주식 자동매매 시스템"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "apscheduler>=3.10",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
    "respx>=0.21",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
