[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kis-autotrader"
version = "0.5.1"
description = "KIS OpenAPI 기반 주식 자동매매 시스템"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "apscheduler>=3.10",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    # 데이터 수집 파이프라인 (docs/plans/2026-05-18_data-collection-pipeline.md)
    "pgvector>=0.3.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "opendartreader>=0.2.0",
    "pyahocorasick>=2.0.0",
    "pykrx>=1.2.8",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
    "respx>=0.21",
]
# 무거운 ML 의존성. Worker 프로세스에서만 사용. Phase 2 진입 시 설치:
#   .venv/bin/pip install -e ".[rag]"
rag = [
    "FlagEmbedding>=1.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "DTZ", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"src/api/account.py" = ["DTZ011"]
"src/api/auth.py" = ["DTZ005", "DTZ007"]
"src/api/health.py" = ["S104", "DTZ005"]
"src/api/quote.py" = ["DTZ007", "DTZ011"]
"src/api/rate_limiter.py" = ["S110", "DTZ011"]
"src/db/analytics.py" = ["DTZ001", "DTZ005"]
"src/db/repository.py" = ["DTZ001", "DTZ011"]
"src/engine.py" = ["DTZ005", "DTZ011", "S110"]
"src/scheduler/holidays.py" = ["DTZ011"]
"src/scheduler/jobs.py" = ["DTZ005", "DTZ011"]
"src/strategy/ensemble.py" = ["B905"]
"src/strategy/risk.py" = ["DTZ005"]
"src/worker/screener.py" = ["DTZ011"]
"main.py" = ["DTZ001", "DTZ011"]
"tests/**" = ["S101", "S106", "DTZ"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# 타입 스텁이 없는 서드파티 라이브러리는 Any로 처리 (import-untyped 노이즈 제거).
# 공식 스텁이 없거나(apscheduler, google API client) 엄격 스텁이 대량의 신규
# 에러를 유발(pandas-stubs)하므로 ignore_missing_imports로 일괄 처리한다.
[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "apscheduler",
    "apscheduler.*",
    "google_auth_oauthlib",
    "google_auth_oauthlib.*",
    "googleapiclient",
    "googleapiclient.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
